RESOLVED FIXED311516
TextUtil::width: Fix unsigned underflow in single whitespace fast path
https://bugs.webkit.org/show_bug.cgi?id=311516
Summary TextUtil::width: Fix unsigned underflow in single whitespace fast path
Chris Dumez
Reported 2026-04-05 02:43:58 PDT
TextUtil::width: Fix unsigned underflow in single whitespace fast path.
Attachments
Chris Dumez
Comment 1 2026-04-05 02:45:12 PDT
EWS
Comment 2 2026-04-05 17:16:18 PDT
Committed 310615@main (7980c0dc3a35): <https://commits.webkit.org/310615@main> Reviewed commits have been landed. Closing PR #62073 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-05 17:17:12 PDT
Note You need to log in before you can comment on or make changes to this bug.